--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint:styles": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.8.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
