--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
